<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="125dp"
              android:orientation="vertical"
              android:padding="@dimen/material_margins">

    <EditText
        android:id="@+id/repoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repository_name_or_author"
        android:maxLines="1"
        android:inputType="text"
        android:nextFocusDown="@+id/gitHubUser"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeActionLabel="@string/search"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="textNoSuggestions"
        android:nextFocusDown="@+id/fab"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right|bottom"
            android:layout_marginBottom="@dimen/material_margins"
            android:layout_marginEnd="@dimen/material_margins"
            android:layout_marginRight="@dimen/material_margins"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_search"
            android:text="@string/search"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            tools:listitem="@layout/item_repository_search_result"
            />

    </FrameLayout>


</LinearLayout>